--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 server.port=8081
 # OpenWeather API Key
-openweather.api.key=2f2e15e634837d4b35125abf41debadc
+openweather.api.key=
 
 # OpenWeather Geocoding API URL
 openweather.geocoding.url=http://api.openweathermap.org/geo/1.0/direct
